[package]
edition = "2021"
name = "wasmedge-wasi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap-fs-ext = "1.0"
cap-std = "1.0"
fs-set-times = "0.18.0"
io-lifetimes = {version = "1.0", default-features = false}
is-terminal = "0.4"
system-interface = {version = "0.25", features = ["cap_std_impls"]}
wasmedge-wasi-common = {path = "../wasmedge-wasi-common"}

[target.'cfg(unix)'.dependencies]
rustix = {version = "0.36", features = ["fs"]}
